feat: persiste in database disc with bar code
