# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\API\AuthController;
+use App\Http\Controllers\API\BoxController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,4 +21,5 @@ Route::post('/login', [AuthController::class, 'login'])->name('api.login');
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/me', [AuthController::class, 'me'])->name('api.me');
     Route::put('/me', [AuthController::class, 'update'])->name('api.me.update');
+    Route::post('/boxes', [BoxController::class, 'store'])->name('api.box.bar_code');
 });
